[gd_scene load_steps=12 format=3 uid="uid://oxhjgdfmxxch"]

[ext_resource type="Script" uid="uid://cjpue2p51mceo" path="res://Scripts/GolfCartBody.gd" id="1_l0d8i"]
[ext_resource type="Texture2D" uid="uid://bv5ox7wd7b0lc" path="res://Art assets/GolfCart.png" id="3_5mk7u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sxk7d"]
size = Vector2(15.1967, 9.88045)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qvra7"]
size = Vector2(16.8622, 18)

[sub_resource type="CircleShape2D" id="CircleShape2D_l0d8i"]
radius = 18.0278

[sub_resource type="AtlasTexture" id="AtlasTexture_5mk7u"]
atlas = ExtResource("3_5mk7u")
region = Rect2(23, 0, 23, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_1r8ac"]
atlas = ExtResource("3_5mk7u")
region = Rect2(0, 0, 23, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtrfp"]
atlas = ExtResource("3_5mk7u")
region = Rect2(69, 0, 23, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_iblk0"]
atlas = ExtResource("3_5mk7u")
region = Rect2(92, 0, 23, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkx8n"]
atlas = ExtResource("3_5mk7u")
region = Rect2(46, 0, 23, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_dnr2i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mk7u")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1r8ac")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtrfp")
}],
"loop": true,
"name": &"rightDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iblk0")
}],
"loop": true,
"name": &"rightUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkx8n")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[node name="bod_cart" type="CharacterBody2D"]
position = Vector2(0, -9)
script = ExtResource("1_l0d8i")

[node name="col_colisor" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
scale = Vector2(0.987057, 1.0121)
shape = SubResource("RectangleShape2D_sxk7d")

[node name="are_hbAttack" type="Area2D" parent="." groups=["colHbAttack"]]
position = Vector2(0, 5)

[node name="col_hb" type="CollisionShape2D" parent="are_hbAttack"]
position = Vector2(-0.5, -5)
scale = Vector2(1.364, 1)
shape = SubResource("RectangleShape2D_qvra7")

[node name="IntercatArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="IntercatArea"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_l0d8i")

[node name="rec_colDebug" type="ColorRect" parent="."]
visible = false
offset_left = -11.0
offset_top = -8.0
offset_right = 15.0
offset_bottom = 9.0
scale = Vector2(0.815141, 0.900819)

[node name="lbl_debug" type="Label" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
offset_left = -18.0
offset_top = 5.0
offset_right = 22.0
offset_bottom = 28.0

[node name="ani_golf" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -1)
sprite_frames = SubResource("SpriteFrames_dnr2i")
animation = &"right"
autoplay = "right"

[connection signal="area_entered" from="are_hbAttack" to="." method="_on_are_hb_attack_area_entered"]
[connection signal="area_exited" from="are_hbAttack" to="." method="_on_are_hb_attack_area_exited"]
[connection signal="area_entered" from="IntercatArea" to="." method="_on_area_entered"]
[connection signal="area_exited" from="IntercatArea" to="." method="_on_area_exited"]
